--- a/homehub/website/appclient/src/styles.css
+++ b/homehub/website/appclient/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+app-root {
+    display: block;
+    height: 100vh;
+    background-color: #000000;
+}
+
+.h-100 {
+    height:100vh;
+}
+
+.h-25 {
+    height:25vh;
+}
+
+.row-section {
+    border:1px solid white;
+}
