--- a/homehub/website/appclient/src/app/app.component.html
+++ b/homehub/website/appclient/src/app/app.component.html
@@ -6,7 +6,8 @@
       </app-clock-widget>
     </div>
     <div class="col-6 row-section">
-
+      <app-current-weather>
+      </app-current-weather>
     </div>
   </div>
   <div class="row h-25 row-section">
