--- a/homehub/website/appclient/src/app/app.component.html
+++ b/homehub/website/appclient/src/app/app.component.html
@@ -12,12 +12,14 @@
   </div>
   <div class="row h-25 row-section">
     <div class="col-12 row-section">
-
+      <app-upcoming-weather>
+      </app-upcoming-weather>
     </div>
   </div>
   <div class="row h-25 row-section">
     <div class="col-12 row-section">
-
+      <app-word-of-the-day>
+      </app-word-of-the-day>
     </div>
   </div>
   <div class="row h-25 row-section">
