--- a/homehub/website/appclient/src/app/app.component.html
+++ b/homehub/website/appclient/src/app/app.component.html
@@ -26,7 +26,8 @@
   </div>
   <div class="row h-25 row-section">
     <div class="col-12 row-section">
-
+      <app-vulnerabilities *ngIf="showVulnerabilities">
+      </app-vulnerabilities>
     </div>
   </div>
 </div>
