--- a/homehub/website/appclient/src/app/app.component.html
+++ b/homehub/website/appclient/src/app/app.component.html
@@ -28,6 +28,8 @@
     <div class="col-12 row-section">
       <app-vulnerabilities *ngIf="showVulnerabilities">
       </app-vulnerabilities>
+      <app-holidays *ngIf="showHolidatCalendar">
+      </app-holidays>
     </div>
   </div>
 </div>
